--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       选择安装后<br />请返回手机桌面查看下载进度
 
     </div>
-    <a href="itms-services://?action=download-manifest&url=https%3A%2F%2Ftransfer.musecdn1.com%2Finsrtq8w4%2Fd5b822cdf5838187c92f52e9c0f08e7e.plist%3Fauth_key%3D1710813600-aW5zcnRxOHc0OjEyMDU5Mw-0-40902073d004fec1cc3c347ef5ce1ce4%26response-content-type%3Dapplication%2Foctet-stream%26response-content-disposition%3Dattachment%253B%2520filename%253D%2522plat.plist%2522%253B%2520filename%252A%253DUTF-8%2527%2527plat.plist"
+    <a href="itms-services://?action=download-manifest&url=https%3A%2F%2Fgithub.com%2FsunyuHL%2Fbitfarm%2Fraw%2Fmain%2Fplat.plist"
       class="btn-ios" onclick="is_weixn_on_ios()">
       <span class="ioc-ios"></span>
       iOS 版下载
